--- a/layouts/partials/persistence/persistence_table.html
+++ b/layouts/partials/persistence/persistence_table.html
@@ -5,7 +5,7 @@
             <th class="coverage-report-header-1">Service</th>
             <th class="coverage-report-header-2">Supported</th>
             <th class="coverage-report-header-1">Persistence Test Suite</th>
-            <th class="coverage-report-header-2">Details</th>
+            <th class="coverage-report-header-2">Limitations</th>
             </tr>
         </thead>
         <tbody>  
