--- a/layouts/partials/taxonomy_terms_article.html
+++ b/layouts/partials/taxonomy_terms_article.html
@@ -20,7 +20,7 @@
   {{ $supportedLimit := where $taxonomy ".LinkTitle" "eq" "supported with limitations" }}
   {{ if or ($supported) ($supportedLimit) }}
   <div class="taxonomy taxonomy-terms-article taxo-{{ urlize $taxo }}">
-    {{ $persistencePage := .Site.GetPage "/user-guide/state-management/support.md" }}
+    {{ $persistencePage := $context.Site.GetPage "/user-guide/state-management/support.md" }}
     <h5 class="taxonomy-title">Persistence:</h5>
     <ul class="taxonomy-terms">
       {{ range ($context.GetTerms $taxo) -}}
