--- a/layouts/partials/persistence/persistence_table.html
+++ b/layouts/partials/persistence/persistence_table.html
@@ -8,8 +8,12 @@
             <th class="coverage-report-header-2">Limitations</th>
             </tr>
         </thead>
-        <tbody>  
-            {{ partial "persistence/persistence_table_row" . }}
+        <tbody>
+            {{ $data := .Site.Data.persistence.coverage }}
+
+            {{ range $data }}
+                {{ partial "persistence/persistence_table_row" . }}
+            {{ end -}}
         </tbody>
     </table>
     <br/>
