adding link to the services

--- a/layouts/partials/persistence/persistence_table_row.html
+++ b/layouts/partials/persistence/persistence_table_row.html
@@ -1,6 +1,6 @@
 <tr>
     <!-- Service -->
-    <td>{{ .full_name }}</td>
+    <td><a href="{{ printf "/user-guide/aws/%s/" .service }}">{{ .full_name }}</a></td>
     <!-- Supported -->
     <td class="coverage-shadow-overlay-green">
         {{ if or (eq .support "supported") (eq .support "supported with limitations") -}}
