Some adaptions to bootstrap 5

--- a/assets/scss/_styles_project.scss
+++ b/assets/scss/_styles_project.scss
@@ -29,6 +29,7 @@ body > header {
 
     & .td-navbar {
         background: linear-gradient(77.63deg, #12123E 23.04%, #12123E 23.05%, #3E3174 122.36%);
+        padding: 0.5rem 1rem;
 
         .td-navbar-nav-scroll {
             margin-top: 0 !important;
