--- a/layouts/partials/navbar.html
+++ b/layouts/partials/navbar.html
@@ -9,7 +9,7 @@
         </a>
     </div>
 
-    <div class="td-navbar-nav-scroll ml-md-auto" id="main_navbar">
+    <div class="td-navbar-nav-scroll ms-md-auto" id="main_navbar">
         <ul class="navbar-nav mt-2 mt-md-0 display-flex align-items-center" style="gap: 0.5rem">
             <!-- disabled link menus (we currently only use this website for a single menu page: docs)
             {{ $p := . }}
