Reenable algolia search, fix privacy notice link color in footer

--- a/assets/scss/_styles_project.scss
+++ b/assets/scss/_styles_project.scss
@@ -213,6 +213,9 @@ footer.footer-localstack {
             color: white;
         }
     }
+    & a {
+        color: $gray-500;
+    }
 
     & hr {
         margin-top: 0.5rem;
