--- a/assets/scss/_styles_project.scss
+++ b/assets/scss/_styles_project.scss
@@ -29,6 +29,7 @@ body > header {
 
     & .td-navbar {
         background: linear-gradient(77.63deg, #12123E 23.04%, #12123E 23.05%, #3E3174 122.36%);
+        padding: 0.5rem 1rem;
 
         .td-navbar-nav-scroll {
             margin-top: 0 !important;
@@ -212,6 +213,9 @@ footer.footer-localstack {
             color: white;
         }
     }
+    & a {
+        color: $gray-500;
+    }
 
     & hr {
         margin-top: 0.5rem;
@@ -220,6 +224,7 @@ footer.footer-localstack {
 }
 
 .taxonomy-terms-cloud {
+    display: none;
 
     .taxonomy-title {
         font-weight: 600;
