fix data-bs-toggle and data-bs-target

--- a/layouts/partials/developer-hub/application.html
+++ b/layouts/partials/developer-hub/application.html
@@ -27,13 +27,13 @@
                 {{ range .services }}
                 <img
                     src="/images/services/{{ . }}.svg"
-                    class="application-icon" data-toggle="tooltip" data-placement="top"
+                    class="application-icon" data-bs-toggle="tooltip" data-placement="top"
                     title="{{index $servicesData .}}" aria-label="{{index $servicesData .}}"
                 />
                 {{ end }}
                 {{ with .pro }}
                 <img
-                src="/images/pro-badge.png" class="application-icon" data-toggle="tooltip"
+                src="/images/pro-badge.png" class="application-icon" data-bs-toggle="tooltip"
                 data-placement="top" title="Localstack Pro" aria-label="Localstack Pro"
                 />
                 {{ end }}
