--- a/layouts/tutorials/single.html
+++ b/layouts/tutorials/single.html
@@ -34,7 +34,7 @@
                 {{ end }}
                 <div>—</div>
                 <div class="dropdown">
-                  <button class="btn btn-primary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                  <button class="btn btn-primary dropdown-toggle" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     <i class="fas fa-share-alt"></i>
                   </button>
                   <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
