--- a/layouts/academy/list.html
+++ b/layouts/academy/list.html
@@ -84,7 +84,7 @@
                   {{ end }}
               </div>
 
-                {{ if (.Site.DisqusShortname) }}
+                {{ if (.Site.Config.Services.Disqus.Shortname) }}
                     <br />
                     {{ partial "disqus-comment.html" . }}
                 {{ end }}
