--- a/layouts/academy/single.html
+++ b/layouts/academy/single.html
@@ -51,7 +51,7 @@
                   </div>
                 {{ end }}
               </div>
-              {{ if (and (not .Params.hide_feedback) (.Site.Params.ui.feedback.enable) (.Site.GoogleAnalytics)) }}
+              {{ if (and (not .Params.hide_feedback) (.Site.Params.ui.feedback.enable) (.Site.Config.Services.GoogleAnalytics.ID)) }}
                 {{ partial "feedback.html" .Site.Params.ui.feedback }}
                 <br />
               {{ end }}
