--- a/layouts/applications/list.html
+++ b/layouts/applications/list.html
@@ -47,11 +47,11 @@
                     {{ end }}
                 </div>
 
-                {{ if (and (not .Params.hide_feedback) (.Site.Params.ui.feedback.enable) (.Site.GoogleAnalytics)) }}
+                {{ if (and (not .Params.hide_feedback) (.Site.Params.ui.feedback.enable) (.Site.Config.Services.GoogleAnalytics.ID)) }}
                     {{ partial "feedback.html" .Site.Params.ui.feedback }}
                     <br />
                 {{ end }}
-                {{ if (.Site.DisqusShortname) }}
+                {{ if (.Site.Config.Services.Disqus.Shortname) }}
                     <br />
                     {{ partial "disqus-comment.html" . }}
                 {{ end }}
