--- a/layouts/lessons/single.html
+++ b/layouts/lessons/single.html
@@ -62,7 +62,7 @@
                   </div>
                 </div>
               {{ end }}
-              {{ if (and (not .Params.hide_feedback) (.Site.Params.ui.feedback.enable) (.Site.GoogleAnalytics)) }}
+              {{ if (and (not .Params.hide_feedback) (.Site.Params.ui.feedback.enable) (.Site.Config.Services.GoogleAnalytics.ID)) }}
                 {{ partial "feedback.html" .Site.Params.ui.feedback }}
                 <br />
               {{ end }}
