--- a/layouts/tutorials/single.html
+++ b/layouts/tutorials/single.html
@@ -46,7 +46,7 @@
               </div>{{ end -}}
               <hr class="mb-5"/>
               {{ .Content }}
-              {{ if (and (not .Params.hide_feedback) (.Site.Params.ui.feedback.enable) (.Site.GoogleAnalytics)) }}
+              {{ if (and (not .Params.hide_feedback) (.Site.Params.ui.feedback.enable) (.Site.Config.Services.GoogleAnalytics.ID)) }}
                 {{ partial "feedback.html" .Site.Params.ui.feedback }}
                 <br />
               {{ end }}
