--- a/layouts/partials/hooks/head-end.html
+++ b/layouts/partials/hooks/head-end.html
@@ -1,2 +1,12 @@
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@docsearch/css@3" />
 <script type="text/javascript" id="hs-script-loader" async defer src="//js-eu1.hs-scripts.com/26596507.js"></script>
+<script
+  async
+  src="https://widget.kapa.ai/kapa-widget.bundle.js"
+  data-website-id="3dfbd0ac-9e56-4664-8315-032e17917ab6"
+  data-project-name="LocalStack"
+  data-project-color="#281763"
+  data-project-logo="https://avatars.githubusercontent.com/u/28732122?s=280&v=4"
+  data-user-analytics-fingerprint-enabled="true"
+  data-modal-disclaimer="This is a custom LocalStack LLM to help you find the information you need by searching across all LocalStack documentation. Give it a try and let us know what you think!"
+></script>
