--- a/layouts/shortcodes/github.html
+++ b/layouts/shortcodes/github.html
@@ -2,7 +2,11 @@
 {{ if (.Get "ref") }}
 {{ $ref = printf "?ref=%s" (.Get "ref") }}
 {{ end }}
-{{ $json := resources.GetRemote "https://api.github.com/repos/"  (.Get "repo")  "/contents/"  (.Get "file") $ref  }}
+{{ $url := "https://api.github.com/repos/" }}
+{{ $opts := dict
+  (.Get "repo")  "/contents/"  (.Get "file") $ref
+}}
+{{ $json := resources.GetRemote $url $opts  }}
 {{ $data := $json | transform.Unmarshal }}
 {{ $con := base64Decode $data.content }}
 {{ $content := "" }}
