Remove obsolete version top-level elements in example docker compose files, include default docker compose files from github directly

--- a/layouts/shortcodes/github.html
+++ b/layouts/shortcodes/github.html
@@ -23,4 +23,8 @@
 {{ $linesToShow := last (sub $end $startIndex) (first $end $lines) }}
 
 {{ $content := delimit $linesToShow "\n" }}
+{{ if $lang }}
 {{ highlight $content $lang $options }}
+{{ else }}
+{{ $content | safeHTML }}
+{{ end }}
