--- a/layouts/partials/replicator/replicator_table.html
+++ b/layouts/partials/replicator/replicator_table.html
@@ -4,7 +4,7 @@
             <tr>
                 <th class="coverage-report-header-1">Resource Type</th>
                 <th class="coverage-report-header-2">Service</th>
-                <th class="coverage-report-header-1">Identifer</th>
+                <th class="coverage-report-header-1">Identifier</th>
                 <th class="coverage-report-header-2">Required Actions</th>
                 <th class="coverage-report-header-1">Arn Support</th>
             </tr>
