--- a/layouts/partials/replicator/replicator_table_row.html
+++ b/layouts/partials/replicator/replicator_table_row.html
@@ -5,7 +5,7 @@
     <td>
         {{ .service }}
     </td>
-    <!-- Identifer -->
+    <!-- Identifier -->
     <td>
         {{.identifier}}</td>
     <!-- Required Actions -->
